added content to the projects section

--- a/index.html
+++ b/index.html
@@ -82,12 +82,54 @@
     <div class="content-section" id="projects" data-aos="fade-up">
         <h2>Projects</h2>
         <div class="project-card">
+            <a href="https://www.andvenus.com">
             <img src="assets/images/and_venus.jpeg" alt="And Venus" class="image">
             <div class="text">
                 <h3>And Venus</h3>
                 <p>My band's official website. Created using HTML, CSS, and Javascript.</p>
             </div>
         </div>
+        <div class="project-card">
+            <img src="assets/images/image-12.jpg" alt="Portfolio" class="image">
+            <div class="text">
+                <h3>Portfolio</h3>
+                <p>My personal website. Created using HTML, CSS, and Javascript.</p>
+                <p>I'm currently working on my personal website. It's a simple design with a focus on modern and minimalist design.</p>
+        </div>      
+    </div>
+    <div class="project-card">
+        <a href="https://horiseon.on.fleek.co">
+            <img src="assets/images/horiseon.png" alt="Horiseon" class="image">
+            <div class="text">
+            <h3>Business Website Mockup</h3>
+            <p>This is a sample website that I created using HTML, CSS, and Javascript</p>
+        </div>
+    </div>
+    <div class="project-card">
+        <a href="https://oneironaught.github.io/run-buddy/">
+            <img src="assets/images/run_buddy.jpeg" alt="run_buddy" class="image">
+            <div class="text">
+            <h3>Run Buddy</h3>
+            <p>This is a sample website that I created using HTML, CSS, and Javascript</p>
+        </div>
+    </div>
+    <div class="project-card">
+        <a href="https://oneironaught.github.io/password-generator/">
+            <img src="assets/images/password_generator.jpeg" alt="password_generator" class="image">
+            <div class="text">
+            <h3>Password Generator</h3>
+            <p>This is a mini Password Generator that I created using HTML, CSS, and Javascript</p>
+        </div>
+    </div>
+    <div class="project-card">
+        <div class="container">
+            <a href="https://sant-andreu-jazz.on.fleek.co">
+            <img src="assets/images/alba.jpg" alt="alba" class="image">
+          <div class="text">
+            <h3>All that Jazz</h3>
+            <p>This is a skeleton for a fan website utilizing hyperlinks and a Buy Now button. I used HTML and CSS</p>
+        </div>
+    </div>
     </div>
 
     <!-- Photos section -->
