added <a> to fix html projects section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2>Projects</h2>
         <div class="project-card">
             <a href="https://www.andvenus.com">
-            <img src="assets/images/and_venus.jpeg" alt="And Venus" class="image">
+            <img src="assets/images/and_venus.jpeg" alt="And Venus" class="image"></a>
             <div class="text">
                 <h3>And Venus</h3>
                 <p>My band's official website. Created using HTML, CSS, and Javascript.</p>
@@ -99,7 +99,7 @@
     </div>
     <div class="project-card">
         <a href="https://horiseon.on.fleek.co">
-            <img src="assets/images/horiseon.png" alt="Horiseon" class="image">
+            <img src="assets/images/horiseon.png" alt="Horiseon" class="image"></a>
             <div class="text">
             <h3>Business Website Mockup</h3>
             <p>This is a sample website that I created using HTML, CSS, and Javascript</p>
@@ -107,7 +107,7 @@
     </div>
     <div class="project-card">
         <a href="https://oneironaught.github.io/run-buddy/">
-            <img src="assets/images/run_buddy.jpeg" alt="run_buddy" class="image">
+            <img src="assets/images/run_buddy.jpeg" alt="run_buddy" class="image"></a>
             <div class="text">
             <h3>Run Buddy</h3>
             <p>This is a sample website that I created using HTML, CSS, and Javascript</p>
@@ -115,7 +115,7 @@
     </div>
     <div class="project-card">
         <a href="https://oneironaught.github.io/password-generator/">
-            <img src="assets/images/password_generator.jpeg" alt="password_generator" class="image">
+            <img src="assets/images/password_generator.jpeg" alt="password_generator" class="image"></a>
             <div class="text">
             <h3>Password Generator</h3>
             <p>This is a mini Password Generator that I created using HTML, CSS, and Javascript</p>
@@ -123,14 +123,14 @@
     </div>
     <div class="project-card">
         <div class="container">
-            <a href="https://sant-andreu-jazz.on.fleek.co">
-            <img src="assets/images/alba.jpg" alt="alba" class="image">
+            <a href="https://sant-andreu-jazz.on.fleek.co"><img src="assets/images/alba.jpg" alt="alba" class="image"></a>
           <div class="text">
             <h3>All that Jazz</h3>
             <p>This is a skeleton for a fan website utilizing hyperlinks and a Buy Now button. I used HTML and CSS</p>
         </div>
     </div>
 </div>
+
 
     <!-- Photos section -->
     <div class="content-section" id="photos" data-aos="fade-up">
