changes to photos section. added photos. changed styles and java script so that photos can appear larger when clicked

--- a/index.html
+++ b/index.html
@@ -131,11 +131,43 @@
 </div>
 
 
-    <!-- Photos section -->
-    <div class="content-section" id="photos" data-aos="fade-up">
-        <h2>Photos</h2>
-        <img src="assets/images/self_1.jpeg" alt="Robert Photo" class="photos" loading="lazy">
+<!-- Photos section -->
+<div class="content-section" id="photos" data-aos="fade-up">
+    <h2>Photos</h2>
+    <div class="photos-container">
+        <div class="photo-container">
+            <img src="assets/images/self_1.jpeg" alt="Robert Photo" class="photos" loading="lazy">
+        </div>
+        <div class="photo-container">
+            <img src="assets/images/self_2.jpg" alt="Robert Photo2" class="photos" loading="lazy">
+        </div>
+        <div class="photo-container">
+            <img src="assets/images/self_3.jpg" alt="Robert Photo3" class="photos" loading="lazy">
+        </div>
+        <div class="photo-container">
+            <img src="assets/images/self_4.jpg" alt="Robert Photo4" class="photos" loading="lazy">
+        </div>
+        <div class="photo-container">
+            <img src="assets/images/self_5.jpg" alt="Robert Photo5" class="photos" loading="lazy">
+        </div>
+        <div class="photo-container">
+            <img src="assets/images/self_6.jpg" alt="Robert Photo6" class="photos" loading="lazy">
+        </div>
+        <div class="photo-container">
+            <img src="assets/images/self_7.jpg" alt="Robert Photo7" class="photos" loading="lazy">
+        </div>
+        <div class="photo-container">
+            <img src="assets/images/self_8.jpg" alt="Robert Photo8" class="photos" loading="lazy">
+        </div>
     </div>
+</div>
+
+<!-- Modal for Enlarging Photos -->
+<div id="photoModal" class="modal">
+    <div class="modal-content">
+        <img id="enlargedPhoto" src="" alt="Enlarged Photo">
+    </div>
+</div>
 
     <!-- Contact Section -->
     <div class="container">
