added info and features to experience and education section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     <div class="content-section" id="about" data-aos="fade-up">
         <h2>About Me</h2>
         <p>My name is Robert Ruelas. I am a Technical Consultant and Software Developer that can help troubleshoot
-            your hardware or elevate your next project. I'm also the co-founder and creative director of And Venus, a musical project that provides insight into the psychology of music.
+            your hardware or elevate your next project. I'm also the co-founder and creative director of And Venus, 
+            a musical project that provides insight into the psychology of music.
         </p>
     </div>
 
@@ -59,23 +60,98 @@
             <li>Front End Developer (HTML, CSS, Javascript)</li>
             <li>Experienced in repairing Mac and iPhone hardware</li>
             <li>ACMT and ACiT certified</li>
+            <li style="text-decoration: underline;">Proficient in:</li>                <ol>HTML, CSS, Javascript</ol>
+                <ol>Python and SwiftUI</ol>
+                <ol>Proficient in macOS and Microsoft</ol>
+                <ol>Proficient in iOS and Android OS</ol>
+                <ol>Proficient in SPSS and R</ol>
         </ul>
     </div>
 
-    <!-- Experience section -->
+<!-- Experience section -->
+<!--Apple work--> 
     <div class="content-section" id="experience" data-aos="fade-up">
         <h2>Experience</h2>
         <div class="experience-card">
+            <img src="assets/images/apple_logo.jpeg" alt="Apple logo">
             <h3>Apple</h3>
             <p>Genius</p>
-            <p>April 2018 - Present</p>
+            <p>April 2018 - July 2024</p>
+            <div class="accordion-item">
+                <button class="accordion-button">View Duties</button>
+                <div class="accordion-content">
+                    <ul>
+                        <li>Exceptional technical customer support for Apple products</li>
+                        <li>Hardware repairs and replacements</li>
+                        <li>Software-related assistance, including setup, configuration, and updates</li>
+                        <li>Accurate and confidential record-keeping to track trends and improve processes</li>
+                        <li>Collaborate and mentor team</li>
+                        <li>Practical use of SwiftUI/debugging</li>
+                        <li>ACMT and ACiT Certified</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
+<!-- Starbucks work -->
+    <div class="content-section" id="experience" data-aos="fade-up">
+        <h2>Experience</h2>
+        <div class="experience-card">
+            <img src="assets/images/starbucks_logo.jpeg" alt="Apple logo">
+            <h3>Starbucks</h3>
+            <p>Manager</p>
+            <p>March 2007 - 2018</p>
+            <div class="accordion-item">
+                <button class="accordion-button">View Duties</button>
+                <div class="accordion-content">
+                    <ul>
+                        <li>Customer service and customer connection</li>
+                        <li>Cash management and maintaining food quality control</li>
+                        <li>Ensuring a clean and positive work environment</li>
+                        <li>Mentoring employees for growth and advancement within the company</li>
+                        <li>Organizing and maintaining product flow in accordance with the planogram</li>    
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>    
+  <!-- Shape of Behavior work -->
+  <div class="content-section" id="experience" data-aos="fade-up">
+    <h2>Experience</h2>
+    <div class="experience-card">
+        <img src="assets/images/the_shape_of_behavior_logo.jpeg" alt="Apple logo">
+        <h3>The Shape of Behavior</h3>
+        <p>Behavior Therapist</p>
+        <p>April 2017 - April 2018</p>
+        <div class="accordion-item">
+            <button class="accordion-button">View Duties</button>
+            <div class="accordion-content">
+                <ul>
+                    <li>Applied Behavioral Analysis (ABA) and Analytical Problem Solving</li>
+                    <li>Day Treatments, Preference Assessment, Parent Training, Social Skills</li>
+                    <li>Shadowing & Inclusion, EEG Biofeedback, Speech Therapy, Autism Therapy</li>
+                    <li>Data Collection Implementation (Catalyst Program)</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
 
     <!-- Education section -->
     <div class="content-section" id="education" data-aos="fade-up">
         <h2>Education</h2>
-        <p>B.A. Psychology from the University of Texas Pan American</p>
+        <a href="https://www.utrgv.edu" target="_blank">
+        <img src="assets/images/utpa_logo.jpeg" alt="UTPA Logo">
+        <p>University of Texas Pan American-<br>
+            Bachelor of Arts in Psychology<br>
+                        2014</p>
+        <br>                
+        <a href="https://whs.wisd.us" target="_blank"> 
+        <img src="assets/images/whs_logo.jpeg" alt="Weslaco High School Logo">
+        <p>Weslaco High School<br>
+            August 2001 - May 2005</p>
+        </a>    
     </div>
 
     <!-- Projects section -->
@@ -129,7 +205,7 @@
         </div>
     </div>
 </div>
-
+    </div>
 
 <!-- Photos section -->
 <div class="content-section" id="photos" data-aos="fade-up">
@@ -168,6 +244,7 @@
         <img id="enlargedPhoto" src="" alt="Enlarged Photo">
     </div>
 </div>
+    </div>
 
     <!-- Contact Section -->
     <div class="container">
@@ -181,9 +258,6 @@
         </div>
     </div>
 
-    <!-- Back to Top Button -->
-    <button onclick="topFunction()" id="backToTopBtn" title="Go to top">Home</button>
-
     <!-- Footer -->
     <footer class="footer">
         <div class="social-icons">
@@ -193,6 +267,8 @@
         </div>
         <p>© 2024 Robert Ruelas</p>
     </footer>
+        <!-- Back to Top Button -->
+        <button onclick="topFunction()" id="backToTopBtn" title="Go to top">Home</button>
 </body>
 
 </html>
