added info to experience section with slight formating changes

--- a/index.html
+++ b/index.html
@@ -46,8 +46,22 @@
     <div class="content-section" id="about" data-aos="fade-up">
         <h2>About Me</h2>
         <p>My name is Robert Ruelas. I am a Technical Consultant and Software Developer that can help troubleshoot
-            your hardware or elevate your next project. I'm also the co-founder and creative director of And Venus, 
-            a musical project that provides insight into the psychology of music.
+            your hardware or elevate your next project. <br> 
+            I'm also the co-founder and creative director of And Venus, 
+            a musical project that provides insight into the psychology of music.<br>
+            Some of my hobbies are taking long walks with my dogs and playing music. 
+            <br>
+            <br>
+            I am a results-driven professional with a Bachelor’s Degree in Psychology from The University of Texas-Pan American,<br>
+            complemented by a diverse background spanning technology, computer hardware repair, retail, music, and clinical research.<br> 
+            My skill set includes but is not limited to the proficiency in Python, macOS, iOS, SaaS, Android OS, and industry-standard<br> 
+            tools such as Visual Studio Code, Xcode, and Logic Pro.
+            <br>
+            <br>
+            As a Certified Mac Technician, I provide expert technical support across all Apple products.<br>
+            My experience extends from quantitative and qualitative data analysis, applied behavior analysis,<br> 
+            to management, interpersonal communication, and mentorship.<br> 
+            I am passionate about driving results and fostering growth in team environments.<br>
         </p>
     </div>
 
@@ -57,15 +71,21 @@
         <ul>
             <li>Effective team management and leadership skills</li>
             <li>Excellent communication and organization skills</li>
-            <li>Front End Developer (HTML, CSS, Javascript)</li>
+            <li>Attention to detail</li>
             <li>Experienced in repairing Mac and iPhone hardware</li>
+            <li>Mentorship</li>
+            <li>Front End Developer</li>
             <li>ACMT and ACiT certified</li>
-            <li style="text-decoration: underline;">Proficient in:</li>                <ol>HTML, CSS, Javascript</ol>
-                <ol>Python and SwiftUI</ol>
-                <ol>Proficient in macOS and Microsoft</ol>
-                <ol>Proficient in iOS and Android OS</ol>
-                <ol>Proficient in SPSS and R</ol>
-        </ul>
+            <li>Music Theory</li>
+            <br>
+            <li style="text-decoration: underline;"><h2>Proficient in:</h2></li></ul>                
+                <li>HTML, CSS, Javascript</li>
+                <li>Python and SwiftUI</li>
+                <li>SaSS</li>
+                <li>macOS and Microsoft</li>
+                <li>iOS and Android OS</li>
+                <li>Debugging macOS and iOS</li>
+                <li>SPSS and R</li>
     </div>
 
 <!-- Experience section -->
@@ -81,13 +101,13 @@
                 <button class="accordion-button">View Duties</button>
                 <div class="accordion-content">
                     <ul>
-                        <li>Exceptional technical customer support for Apple products</li>
-                        <li>Hardware repairs and replacements</li>
-                        <li>Software-related assistance, including setup, configuration, and updates</li>
-                        <li>Accurate and confidential record-keeping to track trends and improve processes</li>
-                        <li>Collaborate and mentor team</li>
-                        <li>Practical use of SwiftUI/debugging</li>
-                        <li>ACMT and ACiT Certified</li>
+                        <ul>Exceptional technical customer support for Apple products</ul>
+                        <ul>Hardware repairs and replacements</ul>
+                        <ul>Software-related assistance, including setup, configuration, and updates</ul>
+                        <ul>Accurate and confidential record-keeping to track trends and improve processes</ul>
+                        <ul>Collaborate and mentor team</ul>
+                        <ul>Practical use of SwiftUI/debugging</ul>
+                        <ul>ACMT and ACiT Certified</ul>
                     </ul>
                 </div>
             </div>
@@ -105,11 +125,11 @@
                 <button class="accordion-button">View Duties</button>
                 <div class="accordion-content">
                     <ul>
-                        <li>Customer service and customer connection</li>
-                        <li>Cash management and maintaining food quality control</li>
-                        <li>Ensuring a clean and positive work environment</li>
-                        <li>Mentoring employees for growth and advancement within the company</li>
-                        <li>Organizing and maintaining product flow in accordance with the planogram</li>    
+                        <ul>Customer service and customer connection</ul>
+                        <ul>Cash management and maintaining food quality control</ul>
+                        <ul>Ensuring a clean and positive work environment</ul>
+                        <ul>Mentoring employees for growth and advancement within the company</ul>
+                        <ul>Organizing and maintaining product flow in accordance with the planogram</ul>    
                     </ul>
                 </div>
             </div>
@@ -127,10 +147,10 @@
             <button class="accordion-button">View Duties</button>
             <div class="accordion-content">
                 <ul>
-                    <li>Applied Behavioral Analysis (ABA) and Analytical Problem Solving</li>
-                    <li>Day Treatments, Preference Assessment, Parent Training, Social Skills</li>
-                    <li>Shadowing & Inclusion, EEG Biofeedback, Speech Therapy, Autism Therapy</li>
-                    <li>Data Collection Implementation (Catalyst Program)</li>
+                    <ul>Applied Behavioral Analysis (ABA) and Analytical Problem Solving</ul>
+                    <ul>Day Treatments, Preference Assessment, Parent Training, Social Skills</ul>
+                    <ul>Shadowing & Inclusion, EEG Biofeedback, Speech Therapy, Autism Therapy</ul>
+                    <ul>Data Collection Implementation (Catalyst Program)</ul>
                 </ul>
             </div>
         </div>
@@ -145,7 +165,7 @@
         <img src="assets/images/utpa_logo.jpeg" alt="UTPA Logo">
         <p>University of Texas Pan American-<br>
             Bachelor of Arts in Psychology<br>
-                        2014</p>
+                       August 2014</p>
         <br>                
         <a href="https://whs.wisd.us" target="_blank"> 
         <img src="assets/images/whs_logo.jpeg" alt="Weslaco High School Logo">
