added more skills to apple work section

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <!--About me section-->
     <div class="content-section" id="about" data-aos="fade-up">
         <h2>About Me</h2>
-        <p>My name is Robert Ruelas. I am a Technical Consultant and Software Developer that can help troubleshoot
+        <p>My name is Robert Ruelas. I am a billingual Technical Consultant and Software Developer that can help troubleshoot
             your hardware or elevate your next project. <br> 
             I'm also the co-founder and creative director of And Venus, 
             a musical project that provides insight into the psychology of music.<br>
-            Some of my hobbies are taking long walks with my dogs and playing music. 
+            Some of my hobbies are taking long walks with my dogs, reading books, and playing music. 
             <br>
             <br>
             I am a results-driven professional with a Bachelor’s Degree in Psychology from The University of Texas-Pan American,<br>
@@ -105,8 +105,15 @@
                         <ul>Hardware repairs and replacements</ul>
                         <ul>Software-related assistance, including setup, configuration, and updates</ul>
                         <ul>Accurate and confidential record-keeping to track trends and improve processes</ul>
-                        <ul>Collaborate and mentor team</ul>
                         <ul>Practical use of SwiftUI/debugging</ul>
+                        <ul>Technical Expertise</ul>
+                        <ul>Product Demonstrations</ul>
+                        <ul>Repair Maintanence</ul>
+                        <ul>Appointment Managment</ul>
+                        <ul>Inventory Managment</ul>
+                        <ul>Continous learning and training</ul>
+                        <ul>Selling Apple Products and Services</ul>
+                        <ul>Collaborate and mentor team</ul>
                         <ul>ACMT and ACiT Certified</ul>
                     </ul>
                 </div>
@@ -115,7 +122,6 @@
     </div>
 <!-- Starbucks work -->
     <div class="content-section" id="experience" data-aos="fade-up">
-        <h2>Experience</h2>
         <div class="experience-card">
             <img src="assets/images/starbucks_logo.jpeg" alt="Apple logo">
             <h3>Starbucks</h3>
@@ -137,7 +143,6 @@
     </div>    
   <!-- Shape of Behavior work -->
   <div class="content-section" id="experience" data-aos="fade-up">
-    <h2>Experience</h2>
     <div class="experience-card">
         <img src="assets/images/the_shape_of_behavior_logo.jpeg" alt="Apple logo">
         <h3>The Shape of Behavior</h3>
