added content to experience section

--- a/index.html
+++ b/index.html
@@ -161,6 +161,13 @@
         </div>
     </div>
 </div>
+<!--More experience-->
+    <div class="content-section" id="experience" data-aos="fade-up">
+        <div class="experience-card">
+            <a href="https://www.linkedin.com/in/rruelas87/" target="_blank">
+            <h3>More experience on Linkedin</h3></a>
+        </div>
+    </div>            
 
 
     <!-- Education section -->
